--- a/RockPaperScissors(KuotM)/RockPaperScissors(KuotM)/Properties/Resources.resx
+++ b/RockPaperScissors(KuotM)/RockPaperScissors(KuotM)/Properties/Resources.resx
@@ -127,4 +127,10 @@
   <data name="scissors" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\scissors.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="Ta_Da" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Ta Da.wav;System.IO.MemoryStream, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
+  <data name="You_lose" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\You lose.wav;System.IO.MemoryStream, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
 </root>
